; ModuleID = '/home/carl/AnghaBench/TDengine/src/client/src/extr_tscSQLParser.c_insertResultField.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/client/src/extr_tscSQLParser.c_insertResultField.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_7__ = type { i64, i32* }

@TSDB_CODE_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @insertResultField(%struct.TYPE_6__* %0, i64 %1, %struct.TYPE_7__* %2, i32 %3, i32 %4, i8* %5) #0 {
  %7 = alloca %struct.TYPE_6__*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.TYPE_7__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %7, align 8
  store i64 %1, i64* %8, align 8
  store %struct.TYPE_7__* %2, %struct.TYPE_7__** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i8* %5, i8** %12, align 8
  store i64 0, i64* %13, align 8
  br label %14

14:                                               ; preds = %28, %6
  %15 = load i64, i64* %13, align 8
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %17 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ult i64 %15, %18
  br i1 %19, label %20, label %31

20:                                               ; preds = %14
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 1
  %24 = load i32*, i32** %23, align 8
  %25 = load i64, i64* %13, align 8
  %26 = getelementptr inbounds i32, i32* %24, i64 %25
  %27 = call i32 @tscColumnBaseInfoInsert(%struct.TYPE_6__* %21, i32* %26)
  br label %28

28:                                               ; preds = %20
  %29 = load i64, i64* %13, align 8
  %30 = add i64 %29, 1
  store i64 %30, i64* %13, align 8
  br label %14

31:                                               ; preds = %14
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 0
  %34 = load i64, i64* %8, align 8
  %35 = load i32, i32* %11, align 4
  %36 = load i8*, i8** %12, align 8
  %37 = load i32, i32* %10, align 4
  %38 = call i32 @tscFieldInfoSetValue(i32* %33, i64 %34, i32 %35, i8* %36, i32 %37)
  %39 = load i64, i64* @TSDB_CODE_SUCCESS, align 8
  ret i64 %39
}

declare dso_local i32 @tscColumnBaseInfoInsert(%struct.TYPE_6__*, i32*) #1

declare dso_local i32 @tscFieldInfoSetValue(i32*, i64, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
